--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,186 @@
 :root{
-  --grey: #838383;
-  --dark-grey: #1d1d1f;
-  --white: #FFFFFF;
+  --color-grey: #838383;
+  --color-dark-grey: #1d1d1f;
+  --color-light: #FFFFFF;
+  --color-dark: #000000;
 }
 
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/InterLight.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/InterRegular.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/InterMedium.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/InterSemiBold.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/InterBold.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+}
 /* font-family: 'Inter', sans-serif; */
+
+html{
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before{
+  box-sizing: inherit;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+img{
+  max-width: 100%;
+}
+
+body{
+  font-family: 'Inter', sans-serif;
+}
+
+/* ^^^ start ^^^ */
+/* hero */
+.container{
+  max-width: 1230px;  /* 1200 + 15 + 15*/
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.btn-reset{
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.list-reset{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.btn{
+  padding: 20px;
+  min-width: 180px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 21px;
+  text-align: center;
+  color: var(--color-dark-grey);
+  background-color: var(--color-light);
+}
+
+.header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 39px 0;
+}
+
+.header__container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__right{
+  display: flex;
+  align-items: center;
+}
+
+.nav__list{
+  display: flex;
+  align-items: center;
+}
+
+.nav__item:not(:last-child){
+  margin-right: 35px;
+}
+
+.nav__link{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--color-light);
+}
+
+.logo{
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 130%;
+  color: var(--color-light);
+}
+
+.header__search{
+  margin-right: 35px;
+  width: 24px;
+  height: 24px;
+}
+
+.header__search svg{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero{
+  height: 100vh;
+  min-height: 800px;
+  padding-top: calc(120px + 150px);
+  background-image: url('../img/hero-cover.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero__title{
+  margin-bottom: 30px;
+  margin: 0;
+  font-weight: 600;
+  font-size: 96px;
+  line-height: 116px;
+  color: var(--color-light);
+  max-width: 936px;
+}
+
+.hero__descr{
+  margin-bottom: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-light);
+  max-width: 468px;
+}
