--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,19 @@
   --color-dark: #000000;
 }
 
+.visually-hidden {
+  position: absolute;
+  /* white-space: nowrap; */
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  /* clip-path: inset(50%); */
+}
+
 @font-face {
   font-family: 'Inter';
   src: url('../fonts/InterLight.woff2') format('woff2');
@@ -97,8 +110,17 @@ body{
   font-size: 17px;
   line-height: 21px;
   text-align: center;
+}
+
+.btn--light{
   color: var(--color-dark-grey);
   background-color: var(--color-light);
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 60px;
 }
 
 .header{
@@ -183,4 +205,82 @@ body{
   line-height: 150%;
   color: var(--color-light);
   max-width: 468px;
+}
+
+.about__top{
+  padding-top: 190px;
+  margin-bottom: 190px;
+}
+
+.about__item:not(:last-child){
+  margin-bottom: 60px;
+}
+
+.completed__value{
+  font-weight: 300;
+  font-size: 64px;
+  line-height: 140%;
+  color: var(--color-dark-grey);
+}
+
+.completed__descr{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-grey);
+}
+
+.about__title{
+  margin: 0;
+  margin-bottom: 60px;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 140%;
+  color: var(--color-dark-grey);
+}
+
+.about__descr{
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-dark-grey);
+}
+
+.about__descr:not(:last-child){
+  margin-bottom: 30px;
+}
+
+.about__video{
+  position: relative;
+  width: 100%;
+  height: 630px;
+  overflow: hidden;
+}
+
+.about__video video{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about__play{
+  position: absolute;
+  height: 100px;
+  width: 100px; 
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.about__play--hidden{
+  display: none;
+}
+
+.about__play svg{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
