--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ body{
 
 .portfolio{
   padding-top: 190px;
+  padding-bottom: 190px;
 }
 
 .portfolio-item:not(:last-child){
@@ -331,3 +332,69 @@ body{
   line-height: 150%;
   color: var(--color-dark-grey);
 } 
+
+.quote{
+  padding-bottom: 190px;
+}
+
+.quote__title{
+  margin: 0;
+  margin-bottom: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-grey);
+}
+
+.quote__content{
+  margin: 0;
+  max-width: 820px;
+}
+
+.quote__text{
+  margin: 0;
+  margin-bottom: 30px;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 150%;
+  color: var(--color-dark-grey);
+}
+
+.quote__author{
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-dark-grey);
+}
+
+.quote__author span{
+  color: var(--color-grey);
+}
+
+.services__image{
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
+  margin-bottom: 190px;
+}
+
+.services-item{
+  border-top: 1px solid rgba(29, 29, 31, 0.4);
+  padding: 40px 0;
+}
+
+.services__title{
+  margin: 0;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 130%;
+  color: var(--color-dark-grey);
+}
+
+.services-item__descr{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-grey);
+}
