--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
   --color-dark-grey: #1d1d1f;
   --color-light: #FFFFFF;
   --color-dark: #000000;
+
+  --offset: 190px;
 }
 
 .visually-hidden {
@@ -215,8 +217,8 @@ body{
 }
 
 .about__top{
-  padding-top: 190px;
-  margin-bottom: 190px;
+  padding-top: var(--offset);
+  margin-bottom: var(--offset);
 }
 
 .about__item:not(:last-child){
@@ -293,8 +295,8 @@ body{
 }
 
 .portfolio{
-  padding-top: 190px;
-  padding-bottom: 190px;
+  padding-top: var(--offset);
+  padding-bottom: var(--offset);
 }
 
 .portfolio-item:not(:last-child){
@@ -334,7 +336,7 @@ body{
 } 
 
 .quote{
-  padding-bottom: 190px;
+  padding-bottom: var(--offset);
 }
 
 .quote__title{
@@ -372,11 +374,15 @@ body{
   color: var(--color-grey);
 }
 
+.services{
+  padding-bottom: var(--offset);
+}
+
 .services__image{
   width: 100%;
   height: 900px;
   object-fit: cover;
-  margin-bottom: 190px;
+  margin-bottom: var(--offset);
 }
 
 .services-item{
@@ -397,4 +403,94 @@ body{
   font-size: 16px;
   line-height: 150%;
   color: var(--color-grey);
+}
+
+footer{
+  padding-top: 90px;
+  padding-bottom: 150px;
+  background-color: var(--color-dark-grey);
+}
+
+.footer__address{
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--color-grey);
+}
+
+.footer__logo{
+  display: inline-block;
+  margin-bottom: 48px;
+}
+
+.social{
+  display: flex;
+  align-items: center;
+}
+
+.social__item:not(:last-child){
+  margin-right: 20px;
+}
+
+.social__link{
+  width: 40px;
+  height: 40px;
+  display: block;
+}
+
+.social__item svg{
+  display: block;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.footer__title{
+  margin: 0;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 130%;
+  color: var(--color-light);
+  margin-bottom: 10px;
+}
+
+.footer__form{
+  position: relative;
+  width: 100%;
+}
+
+.footer__input{
+  border: none;
+  border-bottom: 1px solid var(--color-grey);
+  padding: 24px 0;
+  padding-right: 30px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: var(--color-light);
+  background-color: transparent;
+}
+
+.footer__input::placeholder{
+  color: var(--color-grey);
+}
+
+.footer__btn{
+  position: absolute;
+  right: 0;
+  bottom: 24px;
+  width: 24px;
+  height: 24px;
+}
+
+.footer__btn svg{
+  display: block;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
