--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,76 @@
-:root{
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/InterLight.woff2") format('woff2');
+  font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/InterRegular.woff2") format('woff2');
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/InterMedium.woff2") format('woff2');
+  font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/InterSemiBold.woff2") format('woff2');
+  font-display: swap;
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/InterBold.woff2") format('woff2');
+  font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+}
+
+:root {
+  --color-light: #fff;
   --color-grey: #838383;
-  --color-dark-grey: #1d1d1f;
-  --color-light: #FFFFFF;
-  --color-dark: #000000;
+  --color-dark: #1d1d1f;
 
   --offset: 190px;
 }
 
 .visually-hidden {
   position: absolute;
-  /* white-space: nowrap; */
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -17,329 +78,298 @@
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
-  /* clip-path: inset(50%); */
 }
 
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/InterLight.woff2') format('woff2');
-  font-display: swap;
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/InterRegular.woff2') format('woff2');
-  font-display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/InterMedium.woff2') format('woff2');
-  font-display: swap;
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/InterSemiBold.woff2') format('woff2');
-  font-display: swap;
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/InterBold.woff2') format('woff2');
-  font-display: swap;
-  font-weight: 700;
-  font-style: normal;
-}
-/* font-family: 'Inter', sans-serif; */
-
-html{
-  box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before{
-  box-sizing: inherit;
-}
-
-a{
-  color: inherit;
-  text-decoration: none;
-}
-
-img{
-  max-width: 100%;
-}
-
-body{
-  font-family: 'Inter', sans-serif;
-}
-
-/* ^^^ start ^^^ */
-/* hero */
-.container{
-  max-width: 1230px;  /* 1200 + 15 + 15*/
+.container {
+  max-width: 1230px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
-.btn-reset{
-  padding: 0;
+.btn-reset {
   border: none;
+  padding: 0;
   background-color: transparent;
   cursor: pointer;
 }
 
-.list-reset{
-  padding: 0;
+.list-reset {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
-.btn{
+.btn {
   padding: 20px;
   min-width: 180px;
   font-weight: 600;
   font-size: 17px;
   line-height: 21px;
   text-align: center;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
+  background-color: var(--color-light);
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.btn--light {
+  color: var(--color-dark);
   background-color: var(--color-light);
 }
 
-.btn--light{
-  color: var(--color-dark-grey);
-  background-color: var(--color-light);
-}
-
-.btn--dark{
+.btn--light:hover {
   color: var(--color-light);
-  background-color: var(--color-dark-grey);
+  background-color: var(--color-dark);
 }
 
-.grid{
+.btn--dark {
+  color: var(--color-light);
+  background-color: var(--color-dark);
+}
+
+.btn--dark:hover {
+  color: var(--color-dark);
+  background-color: var(--color-light);
+}
+
+.grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 60px;
+  column-gap: 60px;
 }
 
-.header{
+.header {
   position: absolute;
-  top: 0;
   left: 0;
-  width: 100%;
+  top: 0;
   padding: 39px 0;
+  width: 100%;
 }
 
-.header__container{
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.header__right{
+.header__right {
   display: flex;
   align-items: center;
 }
 
-.nav__list{
+.nav__list {
   display: flex;
   align-items: center;
 }
 
-.nav__item:not(:last-child){
+.nav__item:not(:last-child) {
   margin-right: 35px;
 }
 
-.nav__link{
+.nav__link {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   color: var(--color-light);
+  transition: color 0.3s ease-in-out;
 }
 
-.logo{
+.nav__link:hover {
+  color: var(--color-grey);
+}
+
+.logo {
   font-weight: 500;
   font-size: 32px;
   line-height: 130%;
   color: var(--color-light);
 }
 
-.header__search{
+.header__search {
   margin-right: 35px;
   width: 24px;
   height: 24px;
+  color: var(--color-light);
+  transition: color 0.3s ease-in-out;
 }
 
-.header__search svg{
+.header__search svg {
   display: block;
   width: 100%;
   height: 100%;
+  stroke: currentColor;
   object-fit: cover;
 }
 
-.hero{
-  height: 100vh;
-  min-height: 800px;
-  padding-top: calc(120px + 150px);
-  background-image: url('../img/hero-cover.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.header__search:hover {
+  color: var(--color-grey);
 }
 
-.hero__title{
-  margin-bottom: 30px;
+.hero {
+  padding-top: calc(120px + 150px);
+  padding-bottom: 40px;
+  height: 100vh;
+  min-height: 900px;
+  background-image: url("../img/hero-cover.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero__title {
   margin: 0;
+  margin-bottom: 30px;
+  max-width: 936px;
   font-weight: 600;
   font-size: 96px;
   line-height: 116px;
   color: var(--color-light);
-  max-width: 936px;
 }
 
-.hero__descr{
+.hero__descr {
+  margin: 0;
   margin-bottom: 50px;
+  max-width: 468px;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   color: var(--color-light);
-  max-width: 468px;
 }
 
-.about__top{
+.about__top {
   padding-top: var(--offset);
   margin-bottom: var(--offset);
 }
 
-.about__item:not(:last-child){
+.about__item:not(:last-child) {
   margin-bottom: 60px;
 }
 
-.completed__value{
+.completed__value {
   font-weight: 300;
   font-size: 64px;
   line-height: 140%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.completed__descr{
+.completed__descr {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   color: var(--color-grey);
 }
 
-.about__title{
+.about__title {
   margin: 0;
   margin-bottom: 60px;
   font-weight: 700;
   font-size: 44px;
   line-height: 140%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.about__descr{
+.about__descr {
   margin: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.about__descr:not(:last-child){
+.about__descr:not(:last-child) {
   margin-bottom: 30px;
 }
 
-.about__video{
+.about__video {
   position: relative;
   width: 100%;
   height: 630px;
   overflow: hidden;
 }
 
-.about__video video{
+.about__video video {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.about__play{
+.about__play {
   position: absolute;
-  height: 100px;
-  width: 100px; 
   left: 50%;
   top: 50%;
+  width: 100px;
+  height: 100px;
   transform: translate(-50%, -50%);
+  color: var(--color-light);
+  transition: color 0.3s ease-in-out;
 }
 
-.about__play--hidden{
+.about__play--hidden {
   display: none;
 }
 
-.about__play svg{
+.about__play svg {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.portfolio{
+.about__play circle {
+  fill: currentColor;
+}
+
+.about__play:hover {
+  color: var(--color-grey);
+}
+
+.portfolio {
   padding-top: var(--offset);
   padding-bottom: var(--offset);
 }
 
-.portfolio-item:not(:last-child){
+.portfolio-item:not(:last-child) {
   margin-bottom: 120px;
 }
 
-.portfolio-item__col{
+.portfolio-item__col {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 
-.portfolio-item--reverse .portfolio-item__col:first-child{
+.portfolio-item--reverse .portfolio-item__col:first-child {
   order: 2;
 }
 
-.portfolio-item--reverse .portfolio-item__col:last-child{
+.portfolio-item--reverse .portfolio-item__col:last-child {
   order: 1;
 }
 
-.portfolio__title{
+.portfolio-item__title {
   margin: 0;
+  margin-bottom: 20px;
   font-weight: 400;
   font-size: 24px;
   line-height: 140%;
   color: var(--color-grey);
 }
 
-.portfolio__descr{
+.portfolio-item__descr {
   margin: 0;
   margin-bottom: 60px;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-dark-grey);
-} 
+  color: var(--color-dark);
+}
 
-.quote{
+.quote {
   padding-bottom: var(--offset);
 }
 
-.quote__title{
+.quote__title {
   margin: 0;
   margin-bottom: 50px;
   font-weight: 400;
@@ -348,70 +378,71 @@ body{
   color: var(--color-grey);
 }
 
-.quote__content{
+.quote__content {
   margin: 0;
   max-width: 820px;
 }
 
-.quote__text{
+.quote__text {
   margin: 0;
   margin-bottom: 30px;
   font-weight: 500;
   font-size: 36px;
   line-height: 150%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.quote__author{
+.quote__author {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.quote__author span{
-  color: var(--color-grey);
-}
-
-.services{
+.services {
   padding-bottom: var(--offset);
 }
 
-.services__image{
-  width: 100%;
-  height: 900px;
-  object-fit: cover;
-  margin-bottom: var(--offset);
+.quote__author span {
+  color: var(--color-grey);
 }
 
-.services-item{
+.services__image {
+  width: 100%;
+  height: 900px;
+  margin-bottom: var(--offset);
+  object-fit: cover;
+}
+
+.services-item {
   border-top: 1px solid rgba(29, 29, 31, 0.4);
   padding: 40px 0;
 }
 
-.services__title{
+.services-item__title {
   margin: 0;
   font-weight: 500;
   font-size: 32px;
   line-height: 130%;
-  color: var(--color-dark-grey);
+  color: var(--color-dark);
 }
 
-.services-item__descr{
+.services-item__descr {
+  margin: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   color: var(--color-grey);
 }
 
-footer{
+.footer {
   padding-top: 90px;
   padding-bottom: 150px;
-  background-color: var(--color-dark-grey);
+  background-color: var(--color-dark);
 }
 
-.footer__address{
+.footer__address {
   margin-bottom: 30px;
   font-style: normal;
   font-weight: 400;
@@ -420,48 +451,48 @@ footer{
   color: var(--color-grey);
 }
 
-.footer__logo{
+.footer__logo {
   display: inline-block;
   margin-bottom: 48px;
 }
 
-.social{
+.social {
   display: flex;
   align-items: center;
 }
 
-.social__item:not(:last-child){
+.social__item:not(:last-child) {
   margin-right: 20px;
 }
 
-.social__link{
+.social__link {
+  display: block;
   width: 40px;
   height: 40px;
-  display: block;
 }
 
-.social__item svg{
+.social__link svg {
   display: block;
-  object-fit: cover;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.footer__title{
+.footer__title {
   margin: 0;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 32px;
   line-height: 130%;
   color: var(--color-light);
-  margin-bottom: 10px;
 }
 
-.footer__form{
+.footer__form {
   position: relative;
   width: 100%;
 }
 
-.footer__input{
+.footer__input {
   border: none;
   border-bottom: 1px solid var(--color-grey);
   padding: 24px 0;
@@ -476,11 +507,11 @@ footer{
   background-color: transparent;
 }
 
-.footer__input::placeholder{
+.footer__input::placeholder {
   color: var(--color-grey);
 }
 
-.footer__btn{
+.footer__btn {
   position: absolute;
   right: 0;
   bottom: 24px;
@@ -488,9 +519,9 @@ footer{
   height: 24px;
 }
 
-.footer__btn svg{
+.footer__btn svg {
   display: block;
-  object-fit: cover;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
